--- a/about-us.html
+++ b/about-us.html
@@ -35,8 +35,8 @@
 <!-- HERO -->
 <section class="about-hero">
   <div class="about-hero-overlay"></div>
-  <div class="container">
-    <h1>About Us</h1>
+  <div class="about-hero-content">
+    <h1 class="about-hero-title">One Ecosystem. Infinite Potential.</h1>
   </div>
 </section>
 
@@ -59,60 +59,52 @@
 
 <!-- HOW WE BUILD -->
 
+
 <section class="how-we-build">
-  <div class="container">
-    <h2>How We Build Ventures</h2>
-    <div class="accent-line"></div>
-    <p class="subtitle">
-      Altellect operates as an institutional co-founder.<br>
-      We work alongside founders to move from concept to market with speed, structure, and conviction.
-      <span style="font-weight:700; display:block; margin-top:18px;">Our model is built on three core ideas:</span>
-    </p>
-    <div class="build-grid">
-      <div class="build-item">
-        <div class="count-wrap"><span class="count">01</span></div>
-        <div>
-          <h4>An Integrated Venture Ecosystem</h4>
-          <p>
-            We do not build ventures in isolation.<br>
-            Each Altellect venture is born into a ready ecosystem — combining strategic leadership, sector experts, operators, capital partners, and execution capabilities from day one.<br>
-            This allows founders to access depth and scale early, without fragmentation.
-          </p>
+<div class="container">
+        <h2>How We Build Ventures</h2>
+        <div class="accent-line"></div>
+        <p class="subtitle">
+          Altellect operates as an institutional co-founder.<br>
+          We work alongside founders to move from concept to market with speed, structure, and conviction.
+          <span>Our model is built on three core ideas:</span>
+        </p>
+        <div class="build-grid">
+          <div class="build-item">
+            <div class="count-wrap"><span class="count">01</span></div>
+            <div>
+              <h4>An Integrated Venture Ecosystem</h4>
+              <p>
+                We do not build ventures in isolation.<br>
+                Each Altellect venture is born into a ready ecosystem — combining strategic leadership, sector experts, operators, capital partners, and execution capabilities from day one.<br>
+                This allows founders to access depth and scale early, without fragmentation.
+              </p>
+            </div>
+          </div>
+          <div class="build-item">
+            <div class="count-wrap"><span class="count">02</span></div>
+            <div>
+              <h4>Curated &amp; Aggregated Expertise</h4>
+              <p>
+                Altellect curates and aggregates expertise across sectors and disciplines — engaging the right specialists at the right stage while maintaining a single point of ownership and decision-making.<br>
+                Founders benefit from collective intelligence without losing speed or clarity.
+              </p>
+            </div>
+          </div>
+          <div class="build-item">
+            <div class="count-wrap"><span class="count">03</span></div>
+            <div>
+              <h4>Engineering Success Through Validation</h4>
+              <p>
+                We treat venture creation as a discipline.<br>
+                Ideas are tested systematically, assumptions are challenged early, and only concepts that demonstrate strong market-product fit progress forward.<br>
+                This radical validation ensures capital, time, and talent are focused where they matter most.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="build-item">
-        <div class="count-wrap"><span class="count">02</span></div>
-        <div>
-          <h4>Curated &amp; Aggregated Expertise</h4>
-          <p>
-            Altellect curates and aggregates expertise across sectors and disciplines — engaging the right specialists at the right stage while maintaining a single point of ownership and decision-making.<br>
-            Founders benefit from collective intelligence without losing speed or clarity.
-          </p>
-        </div>
-      </div>
-      <div class="build-item">
-        <div class="count-wrap"><h2 class="count">03</h2></div>
-        <div>
-          <h4>Engineering Success Through Validation</h4>
-          <p>
-            We treat venture creation as a discipline.<br>
-            Ideas are tested systematically, assumptions are challenged early, and only concepts that demonstrate strong market-product fit progress forward.<br>
-            This radical validation ensures capital, time, and talent are focused where they matter most.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- BELIEF -->
-<section class="belief">
-  <div class="container belief-grid">
-    <div class="belief-card">
-      <img src="assets/belief-1.jpg" alt="">
-      <h4>From Market-Product Fit to Scale</h4>
-      <p>
-        Once validated, ventures are structured to scale efficiently
-        with repeatable systems.
+    </section>
       </p>
     </div>
 
@@ -132,47 +124,39 @@
 <section class="leadership-section">
   <div class="container">
     <h2 class="section-title">Leadership</h2>
+    <div class="accent-line"></div>
     <p class="section-desc">
       Altellect is led by a senior leadership team with experience across venture building, capital, strategy, brand and operations.
     </p>
     <p class="section-desc">
       The leadership team brings perspective, judgement, and long-term stewardship to every venture — guiding critical decisions, curating expertise, and ensuring consistency of intent across the ecosystem.
     </p>
-
-    <div class="slider-leadership">
-      <div class="slider-track">
-        <div class="leader-card slide active">
-          <div class="leader-img">
-            <img src="assets/leader-1.jpg" alt="Vijay Narayanan" />
-          </div>
-          <div class="leader-info">
-            <h3>Vijay Narayanan</h3>
-            <span class="leader-title">Chief Vision Officer</span>
-            <div class="leader-dash"></div>
-            <p class="leader-exp">30+ Yrs Of Leadership Experience.</p>
-            <p class="leader-journey"><strong>Professional Journey :</strong> Altellect , AweSpace.Ventures</p>
-          </div>
+    <div class="leadership-cards">
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="assets/Vijay.png" alt="Vijay Narayanan" />
         </div>
-        <div class="leader-card slide">
-          <div class="leader-img">
-            <img src="assets/leader-2.jpg" alt="Ayaana Khapre" />
-          </div>
-          <div class="leader-info">
-            <h3>Ayaana Khapre</h3>
-            <span class="leader-title">Chief Transformation Officer</span>
-            <div class="leader-dash"></div>
-            <p class="leader-exp">20+ Yrs Of Multi-Disciplinary Leadership Exp.</p>
-            <p class="leader-journey"><strong>Professional Journey :</strong> AweSpace.Estate , Roqoqo Designs</p>
-          </div>
+        <div class="leader-info">
+          <h3>Vijay Naraayanan</h3>
+          <span class="leader-title">Chief Vision Officer</span>
+          <div class="leader-dash"></div>
+          <p class="leader-exp">30+ Yrs Of Leadership Experience.</p>
+          <p class="leader-journey"><strong>Professional Journey :</strong> Altellect , AweSpace.Ventures</p>
         </div>
       </div>
-      <div class="slider-dots">
-        <span class="dot active" onclick="showSlide(0)"></span>
-        <span class="dot" onclick="showSlide(1)"></span>
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="assets/Ayaana.png" alt="Ayaana Khapre" />
+        </div>
+        <div class="leader-info">
+          <h3>Ayaana Khapre</h3>
+          <span class="leader-title">Chief Transformation Officer</span>
+          <div class="leader-dash"></div>
+          <p class="leader-exp">20+ Yrs Of Multi-Disciplinary Leadership Exp.</p>
+          <p class="leader-journey"><strong>Professional Journey :</strong> AweSpace.Estate , Roqoqo Designs</p>
+        </div>
       </div>
     </div>
-
-
   </div>
 </section>
 
