--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- HERO BANNER -->
 <section class="hero">
-  <img src="assets/Banner-img.png" class="hero-img" alt="" />
+  <img src="assets/Banner-img@2x.png" class="hero-img" alt="" />
 
   <div class="hero-overlay"></div>
 
@@ -211,9 +211,12 @@
 
 
 <!-- CTA BAR -->
+
+<!-- CTA BAR (Redesigned as per XD) -->
 <section class="cta-wrap">
-  <div class="cta-inner">
-    <button class="cta-btn">LET’S CONNECT!</button>
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
   </div>
 </section>
 
@@ -269,47 +272,7 @@
 
 
 
-<!-- FOOTER -->
-<footer class="footer">
-  <div class="container footer-grid">
-    <!-- LOGO + ADDRESS -->
-    <div class="footer-brand">
-      <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
-      <p>
-        801, 8th Floor, Sea Breeze Building,<br>
-        Century Bazaar, Prabhadevi, Mumbai,<br>
-        Maharashtra 400025
-      </p>
-    </div>
-    <!-- MENU -->
-    <div>
-      <h5>Menu</h5>
-      <a href="#">Projects</a>
-      <a href="#">Altellect Capital</a>
-      <a href="#">Careers</a>
-    </div>
-    <!-- SUPPORT -->
-    <div>
-      <h5>Support</h5>
-      <a href="#">Contact Us</a>
-    </div>
-    <!-- COMPANY -->
-    <div>
-      <h5>Company</h5>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Join The Ecosystem</a>
-      <div class="socials">
-        <a href="#">f</a>
-        <a href="#">in</a>
-      </div>
-    </div>
-  </div>
-  <div class="footer-bottom container">
-    <span>Copyright © 2026 Altellect | All rights reserved.</span>
-    <a href="#">Privacy Policy</a>
-  </div>
-</footer>
+
 
 </body>
 </html>
